# roblox-modloader

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  help_request.md
.github/workflows/: build.yml  nightly.yml  release.yml
cmake/: RobloxModLoaderConfig.cmake.in  cpm.cmake  dependencies.cmake
examples/: CMakeLists.txt
examples/basic-mod/: main.cpp
examples/discord_rpc/: CMakeLists.txt  discord_sdk.cpp  discord_sdk.hpp  main.cpp  mod.toml
examples/discord_rpc/scripts/: edit.luau  standalone.luau
examples/internal_developer/: main.cpp  pointers_internal.cpp  pointers_internal.hpp  roblox_pointers_internal.hpp
include/RobloxModLoader/: common.hpp  rml_export.hpp
include/RobloxModLoader/config/: config.hpp  config_helpers.hpp  config_manager.hpp  config_serialization.hpp  config_types.hpp
include/RobloxModLoader/exception/: exception_filter.hpp
include/RobloxModLoader/hooking/: call_hook.hpp  detour_hook.hpp  hooking.hpp  vmt_hook.hpp  vtable_hook.hpp
include/RobloxModLoader/logger/: logger.hpp
include/RobloxModLoader/luau/: script_context.hpp  script_engine.hpp  script_manager.hpp  script_scheduler.hpp
include/RobloxModLoader/luau/environment/: bridge_provider.hpp  environment.hpp  globals_registry.hpp  require_provider.hpp  rml_provider.hpp
include/RobloxModLoader/memory/: all.hpp  batch.hpp  byte_patch.hpp  handle.hpp  module.hpp  module_utils.hpp  pattern.hpp  pe_parser.hpp  range.hpp  rtti_scanner.hpp  rtti_utils.hpp
include/RobloxModLoader/mod/: events.hpp  mod.hpp  mod_base.hpp
include/RobloxModLoader/roblox/: actor.hpp  adorn_render.hpp  data_model.hpp  data_model_job.hpp  instance.hpp  job.hpp  job_base.hpp  job_manager.hpp  job_types.hpp  render_view.hpp  script.hpp  script_context.hpp  task_scheduler.hpp  task_scheduler.job.hpp  visual_engine.hpp  waiting_hybrid_scripts_job.hpp
include/RobloxModLoader/roblox/bullet_physics/LinearMath/: btAlignedAllocator.cpp  btConvexHull.cpp  btConvexHullComputer.cpp  btGeometryUtil.cpp  btQuickprof.cpp  btVector3.cpp
include/RobloxModLoader/roblox/g3d/: AABSPTree.h  AABox.h  Array.h  Box.h  BumpMapPreprocess.h  Capsule.h  Color1.h  Color1uint8.h  Color3.h  Color3uint8.h  Color4.h  Color4uint8.h  CoordinateFrame.h  Crypto.h  Cylinder.h  GCamera.h  GImage.h  GLight.h  HashTrait.h  LightingParameters.h  Line.h  LineSegment.h  Matrix3.h  Matrix4.h  MemoryManager.h  MeshAlg.h  PhysicsFrame.h  Plane.h  Quat.h  Random.h  Ray.h  Rect2D.h  Sphere.h  System.h  Triangle.h  UprightFrame.h  Vector2.h  Vector2int16.h  Vector3.h  Vector3int16.h  (+11 more)
include/RobloxModLoader/roblox/luau/: roblox_extra_space.hpp
include/RobloxModLoader/roblox/rbxg3d/: Device.h  DeviceContext.h  RbxCamera.cpp  RbxCamera.h  RbxRay.cpp  RbxRay.h  RbxTime.h
include/RobloxModLoader/roblox/security/: script_permissions.hpp
include/RobloxModLoader/roblox/util/: BrickColor.h  Extents.cpp  Extents.h  G3DCore.h  Math.cpp  Math.h  NormalId.cpp  NormalId.h  PV.h  RobloxHitTestFilter.h  Rotation2d.h  Velocity.h  standard_out.hpp
include/RobloxModLoader/util/: compile_time_helpers.hpp
libraries/: bridge.luau  logger.luau
proxy_generator/: CMakeLists.txt  main.cpp  proxy.rc
proxy_generator/exports/: dwmapi.exports  version.exports
reversing/: roblox.genny
scripts/: json.cmake  luau.cmake  minhook.cmake  spdlog.cmake  toml.cmake  tracy.cmake  zlib.cmake
src/: common.hpp  function_types.hpp  main.cpp  mod_manager.cpp  mod_manager.hpp  pointers.cpp  pointers.hpp  roblox_pointers.hpp
src/config/: config_manager.cpp  config_serialization.cpp
src/exception/: exception_filter.cpp
src/hooking/: call_hook.cpp  detour_hook.cpp  hooking.cpp  vmt_hook.cpp  vtable_hook.cpp
src/hooks/authentication/: on_authentication.cpp
src/hooks/exception/: rbx_crash.cpp
src/hooks/internal/: is_internal.cpp
src/hooks/luau/: luau_load.cpp
src/hooks/profiler/: profile_log.cpp
src/hooks/qt/: on_window_create.cpp
src/hooks/rendering/: render_impl.cpp  render_pass_2d.cpp  render_pass_3d.cpp  render_perform.cpp  render_view.cpp
src/hooks/script_context/: resume_waiting_scripts.cpp
src/hooks/task_scheduler/: jobs.cpp
src/logger/: logger.cpp  logger.hpp
src/luau/: script_context.cpp  script_engine.cpp  script_manager.cpp  script_scheduler.cpp
src/luau/environment/: bridge_provider.cpp  globals_registry.cpp  require_provider.cpp  rml_provider.cpp
src/memory/: byte_patch.cpp  module.cpp  module_utils.cpp  pattern.cpp  pe_parser.cpp  range.cpp  rtti_scanner.cpp  rtti_utils.cpp
src/mod/: events.cpp  mod.cpp  mod_base.cpp
src/roblox/: data_model.cpp  job.cpp  job_manager.cpp  script_context.cpp  task_scheduler.cpp
src/roblox/g3d/: AABox.cpp  BinaryInput.cpp  BinaryOutput.cpp  Box.cpp  Capsule.cpp  CollisionDetection.cpp  Color3.cpp  Color3uint8.cpp  Color4.cpp  Color4uint8.cpp  CoordinateFrame.cpp  Crypto.cpp  Cylinder.cpp  GCamera.cpp  GImage.cpp  GImage_bayer.cpp  GImage_bmp.cpp  GImage_tga.cpp  GLight.cpp  LightingParameters.cpp  Line.cpp  LineSegment.cpp  Matrix3.cpp  Matrix4.cpp  MemoryManager.cpp  PhysicsFrame.cpp  Plane.cpp  Quat.cpp  Random.cpp  Ray.cpp  Sphere.cpp  System.cpp  Triangle.cpp  UprightFrame.cpp  Vector2.cpp  Vector2int16.cpp  Vector3.cpp  Vector3int16.cpp  Vector4.cpp  debugAssert.cpp  (+6 more)
src/roblox/jobs/: data_model_watcher_job.cpp  data_model_watcher_job.hpp
src/roblox/jobs/scripting/: luau_waiting_script_job.cpp  luau_waiting_script_job.hpp
src/roblox/utils/: standard_out.cpp
src/utils/: directory_utils.cpp  directory_utils.hpp
